GearsetPOC/force-app/main/default/objects/Business_Contract__c/Business_Contract__c.object-meta.xml
<CustomObject>
    <description>Custom Business Contract object created as part of Eurostar Delta migration project. Eurostar Jira ref DEIS-283</description>
    <label>Business Contract</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Contract Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>