GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Contracts (Account Name)</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>