GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/B2b_ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>B2b_ContractStartDate__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>