GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/B2b_FCE__c.field-meta.xml
<CustomField>
    <fullName>B2b_FCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCE</label>
    <referenceTo>Corp_Tracking_Type_and_Code__c</referenceTo>
    <relationshipLabel>Business Contracts</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>