GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/B2b_Status__c.field-meta.xml
<CustomField>
    <fullName>B2b_Status__c</fullName>
    <label>Status (delete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>