GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Business_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Status__c</fullName>
    <formula>TEXT(AccountId__r.Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account Status</label>
    <type>Text</type>
</CustomField>