GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Calendar_Text__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Text__c</fullName>
    <description>key information to provide a relevant description in the calendar</description>
    <formula>Name &amp; &quot; &quot; &amp;
AccountId__r.Name &amp; &quot; &quot; &amp; 
TEXT(StartDate__c) &amp; &quot; &quot; &amp; 
TEXT(EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Text</label>
    <type>Text</type>
</CustomField>