GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Business Contracts</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>