GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Contract_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Contract Legacy Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>