GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Contract_Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Due__c</fullName>
    <description>shows a visual icon that indicates the renewal status of the Contract</description>
    <formula>IF(
	End_of_Contract__c,
	IMAGE(&quot;/resource/RedCross&quot;, &quot;Red Cross&quot;),
	IF(
		ISPICKVAL(Status__c, &quot;New&quot;),
		IMAGE(&quot;/resource/BlueStar&quot;, &quot;Blue Star&quot;),
		IF(
			ISPICKVAL(Status__c, &quot;Active&quot;),
			IF(
				(Review_Date__c - TODAY()) &gt; 30, /*More than month to*/
				IMAGE(&quot;/resource/GreenTick&quot;, &quot;Green Tick&quot;),
				IF(
					AND(
						(Review_Date__c - TODAY()) &lt; 30,/*less than a month to*/
						(Review_Date__c - TODAY()) &gt; 0),
					IMAGE(&quot;/resource/AmberStar&quot;, &quot;Amber Star&quot;),
					IF(
						Review_Date__c &lt; TODAY(), /*review date passed*/
						IMAGE(&quot;/resource/Triangle&quot;, &quot;Triangle with an exclamation mark&quot;),
						&quot;&quot;
					)
				)
			),
			&quot;&quot;
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Review Due?</label>
    <type>Text</type>
</CustomField>