GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Corp_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Corp_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corp Tracking</label>
    <referenceTo>Corp_Tracking__c</referenceTo>
    <relationshipLabel>Business Contracts</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>