GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Discount_Level_BP__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_BP__c</fullName>
    <label>Discount Level BP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>