GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/End_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>End_of_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually set by the Account Manager to confirm the contract has ended</description>
    <label>End of Contract</label>
    <type>Checkbox</type>
</CustomField>