GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>