GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Established_Date__c</fullName>
    <description>Date that the contract was first signed.</description>
    <label>Established Date</label>
    <type>Date</type>
</CustomField>