GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Fare_Range__c.field-meta.xml
<CustomField>
    <fullName>Fare_Range__c</fullName>
    <description>Shows the Fare Range from the Account</description>
    <formula>IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;Public&quot; ), &quot;Public; &quot;,null ) &amp;
IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;RIT&quot; ), &quot;RIT; &quot;,null ) &amp;
IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;Allotment&quot; ), &quot;Allotment; &quot;,null ) &amp;
IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;Groups&quot; ), &quot;Groups; &quot;,null ) &amp;
IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;Concession Fares&quot; ), &quot;Concession Fares; &quot;,null ) &amp;
IF ( INCLUDES ( AccountId__r.Fare_Range__c , &quot;FIP&quot; ), &quot;FIP; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fare Range</label>
    <type>Text</type>
</CustomField>