GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/FCE_Code__c.field-meta.xml
<CustomField>
    <fullName>FCE_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the FCE Code for the Contract</description>
    <label>Corporate Tracking Code</label>
    <referenceTo>Corp_Tracking_Type_and_Code__c</referenceTo>
    <relationshipLabel>Business Contracts (FCE / Code)</relationshipLabel>
    <relationshipName>Business_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>