GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <formula>Parent_Contract__c = null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>