GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/IsManager__c.field-meta.xml
<CustomField>
    <fullName>IsManager__c</fullName>
    <formula>(Owner:User.ManagerId  =  $User.Id) || (Secondary_Contract_Owner__r.ManagerId = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsManager</label>
    <type>Checkbox</type>
</CustomField>