GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>(OwnerId =  $User.Id ) || (Secondary_Contract_Owner__c = $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>