GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Most_Recent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract__c</fullName>
    <formula>IF( AccountId__r.Most_Recent_Contract__c = Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Contract</label>
    <type>Checkbox</type>
</CustomField>