GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Other_Discount_NL__c.field-meta.xml
<CustomField>
    <fullName>Other_Discount_NL__c</fullName>
    <label>Other Discount (NL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>