GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currently filled by an automation</description>
    <label>Parent Account</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Contracts (Parent Account)</relationshipLabel>
    <relationshipName>Business_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>