GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currently filled by an automation</description>
    <label>Parent Contract</label>
    <referenceTo>Business_Contract__c</referenceTo>
    <relationshipLabel>Business Contracts</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>