GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>Annual Review / Renegotiation Date</label>
    <type>Date</type>
</CustomField>