GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Secondary_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>