GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Signatory_Contact__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatory Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Contracts</relationshipLabel>
    <relationshipName>Business_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>