GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>