GearsetPOC/force-app/main/default/objects/Business_Contract__c/fields/Unique_Contract__c.field-meta.xml
<CustomField>
    <fullName>Unique_Contract__c</fullName>
    <description>Shows the value of the checkbox field on the Account</description>
    <formula>AccountId__r.Unique_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Contract</label>
    <type>Checkbox</type>
</CustomField>