GearsetPOC/force-app/main/default/objects/Business_Contract__c/recordTypes/Agency.recordType-meta.xml
<RecordType>
    <fullName>Agency</fullName>
    <active>true</active>
    <label>Agency</label>
</RecordType>