GearsetPOC/force-app/main/default/objects/Business_Contract__c/recordTypes/Contract_NCO.recordType-meta.xml
<RecordType>
    <fullName>Contract_NCO</fullName>
    <active>true</active>
    <label>Contract NCO</label>
</RecordType>