GearsetPOC/force-app/main/default/objects/Business_Contract__c/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <label>Corporate London</label>
</RecordType>