GearsetPOC/force-app/main/default/objects/Business_Contract__c/recordTypes/Thalys.recordType-meta.xml
<RecordType>
    <fullName>Thalys</fullName>
    <active>true</active>
    <label>Corporate Continent</label>
</RecordType>