GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/Account_must_have_Corp_Tracking.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_must_have_Corp_Tracking</fullName>
    <active>false</active>
    <description>A contract can only be created if the Account has a Corporate Tracking code.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
ISNEW(),
AccountId__r.FCE__c == NULL,
 AccountId__r.RecordType.Name = &#39;Corporate Account&#39;
)</errorConditionFormula>
    <errorMessage>The Account must have a Corporate Tracking code.</errorMessage>
</ValidationRule>