GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/Account_Status_Contracted.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Status_Contracted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !($User.B2b_Bypass_Validation_Rules__c),
    ISNEW(),
    OR(
        AccountId__r.RecordType.DeveloperName = &#39;Corporate_Account&#39;,
        AccountId__r.RecordType.DeveloperName = &#39;Business_Accounts&#39;
    ),
    TEXT(AccountId__r.Account_Status__c) != &#39;Contracted&#39;
)</errorConditionFormula>
    <errorMessage>Account Status must be Contracted</errorMessage>
</ValidationRule>