GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/Account_type_for_contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_type_for_contract</fullName>
    <active>true</active>
    <description>The Account related to the Contract cannot be of type “Prospect” or “Other”</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
ISNEW(),
!ISPICKVAL(AccountId__r.Red_Account_Type__c, &#39;TCF2&#39;),
!ISPICKVAL(AccountId__r.Red_Account_Type__c, &#39;TCF1&#39;),
!ISPICKVAL(AccountId__r.Red_Account_Type__c, &#39;Covid&#39;), 
 AccountId__r.RecordType.Name = &#39;Corporate Account&#39;,
 RecordType.Name = &#39;Corporate Continent&#39;
)</errorConditionFormula>
    <errorMessage>The account related to the Contract must be of the type TCF 1 or TCF 2</errorMessage>
</ValidationRule>