GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/Annual_Review_cant_be_cleared.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Review_cant_be_cleared</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(RecordType.Name = &#39;Corporate London&#39;,RecordType.Name = &#39;Corporate Continent&#39;) ,
ISCHANGED( Review_Date__c),
ISBLANK(Review_Date__c) 
)</errorConditionFormula>
    <errorDisplayField>Review_Date__c</errorDisplayField>
    <errorMessage>Annual Review/Renegotiation Date cannot be changed to blank once it has been populated</errorMessage>
</ValidationRule>