GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/NegotiatedRateStartDateEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>NegotiatedRateStartDateEndDate</fullName>
    <active>true</active>
    <description>Validation rule to prevent &quot;end date&quot; before &quot;start date&quot;</description>
    <errorConditionFormula>StartDate__c &gt;=EndDate__c</errorConditionFormula>
    <errorMessage>Start Date can&#39;t be higher or equal than the End Date.</errorMessage>
</ValidationRule>