GearsetPOC/force-app/main/default/objects/Business_Contract__c/validationRules/Past_Start_Date_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Start_Date_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
OR(AND( OR(ISCHANGED(StartDate__c), ISNEW()) , NOT(ISBLANK(StartDate__c)),
StartDate__c &lt; TODAY()),AND(OR(ISCHANGED(StartDate__c), ISNEW()) ,NOT(ISBLANK(EndDate__c)),
EndDate__c&lt; TODAY()))
)</errorConditionFormula>
    <errorMessage>The contract start and end date should be in the future</errorMessage>
</ValidationRule>