GearsetPOC/force-app/main/default/objects/Business_Contract__c/listViews/Contracts_due_for_renewal.listView-meta.xml
<ListView>
    <fullName>Contracts_due_for_renewal</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_of_Contract__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Review_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Contracts due for renewal</label>
</ListView>