GearsetPOC/force-app/main/default/objects/Business_Contract__c/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,New</value>
    </filters>
    <label>Kanban</label>
</ListView>